--- a/payment.html
+++ b/payment.html
@@ -16,9 +16,12 @@
       const checkoutButton = document.getElementById('checkout-button');
 
       checkoutButton.addEventListener('click', async () => {
-        const response = await fetch('http://localhost:3000/create-session', {
-          method: 'POST',
-        });
+        const response = await fetch(
+          'https://immotep-server.onrender.com/create-session',
+          {
+            method: 'POST',
+          }
+        );
 
         const session = await response.json();
 
