--- a/payment.html
+++ b/payment.html
@@ -3,44 +3,142 @@
   <head>
     <title>Paiement Premium</title>
     <script src="https://js.stripe.com/v3/"></script>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          sans-serif;
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+      }
+
+      .container {
+        background: white;
+        padding: 2.5rem;
+        border-radius: 20px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        max-width: 90%;
+        width: 400px;
+        animation: fadeIn 0.5s ease-out;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      h1 {
+        color: #2d3748;
+        margin-bottom: 1.5rem;
+        font-size: 2rem;
+      }
+
+      .price {
+        color: #4a5568;
+        font-size: 1.25rem;
+        margin-bottom: 1.5rem;
+        padding: 1rem;
+        background: #f7fafc;
+        border-radius: 12px;
+        display: inline-block;
+      }
+
+      #loading {
+        color: #718096;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+      }
+
+      .spinner {
+        width: 20px;
+        height: 20px;
+        border: 3px solid #e2e8f0;
+        border-top: 3px solid #4299e1;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
+      .error {
+        color: #e53e3e;
+        background: #fff5f5;
+        padding: 1rem;
+        border-radius: 8px;
+        margin-top: 1rem;
+        display: none;
+      }
+    </style>
   </head>
   <body>
-    <h1>Extension Premium</h1>
-    <p>Accès à vie pour seulement 9.99€</p>
-    <button id="checkout-button">Payer maintenant</button>
+    <div class="container">
+      <h1>Extension Premium</h1>
+      <div class="price">Accès à vie pour seulement 9.99€</div>
+      <div id="loading">
+        <div class="spinner"></div>
+        Redirection vers le paiement en cours...
+      </div>
+      <div id="error" class="error"></div>
+    </div>
 
     <script>
-      // Récupérer le mode Stripe depuis le serveur
-      async function getStripeKey() {
-        const response = await fetch(
-          'https://immotep-server.onrender.com/stripe-mode'
-        );
-        const data = await response.json();
-        return data.publicKey;
-      }
-
-      async function initializeStripe() {
-        const publicKey = await getStripeKey();
-        const stripe = Stripe(publicKey);
-
-        const checkoutButton = document.getElementById('checkout-button');
-
-        checkoutButton.addEventListener('click', async () => {
+      async function redirectToCheckout() {
+        try {
+          // Récupérer la clé publique Stripe
           const response = await fetch(
-            'https://immotep-server.onrender.com/create-session',
+            "https://immotep-server.onrender.com/stripe-mode"
+          );
+          const data = await response.json();
+          const stripe = Stripe(data.publicKey);
+
+          // Créer la session
+          const sessionResponse = await fetch(
+            "https://immotep-server.onrender.com/create-session",
             {
-              method: 'POST',
+              method: "POST",
             }
           );
+          const session = await sessionResponse.json();
 
-          const session = await response.json();
-          const result = await stripe.redirectToCheckout({
+          // Rediriger vers Stripe
+          await stripe.redirectToCheckout({
             sessionId: session.id,
           });
-        });
+        } catch (error) {
+          const errorDiv = document.getElementById("error");
+          errorDiv.textContent = "Une erreur est survenue. Veuillez réessayer.";
+          errorDiv.style.display = "block";
+          document.getElementById("loading").style.display = "none";
+          console.error("Erreur:", error);
+        }
       }
 
-      initializeStripe();
+      // Lancer la redirection automatiquement
+      redirectToCheckout();
     </script>
   </body>
 </html>
