--- a/activation.html
+++ b/activation.html
@@ -4,18 +4,18 @@
     <title>Activation Premium</title>
     <style>
       @font-face {
-        font-family: "Gilroy_Bold";
-        src: url("/fonts/Gilroy-Bold.ttf") format("truetype");
+        font-family: 'Gilroy_Bold';
+        src: url('/fonts/Gilroy-Bold.ttf') format('truetype');
       }
 
       @font-face {
-        font-family: "Gilroy_Medium";
-        src: url("/fonts/Gilroy-Medium.ttf") format("truetype");
+        font-family: 'Gilroy_Medium';
+        src: url('/fonts/Gilroy-Medium.ttf') format('truetype');
       }
 
       @font-face {
-        font-family: "Gilroy_Regular";
-        src: url("/fonts/Gilroy-Regular.ttf") format("truetype");
+        font-family: 'Gilroy_Regular';
+        src: url('/fonts/Gilroy-Regular.ttf') format('truetype');
       }
 
       * {
@@ -49,11 +49,11 @@
         background: white;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         border-radius: 10px;
-        font-family: "Gilroy_Medium";
+        font-family: 'Gilroy_Medium';
       }
 
       h1 {
-        font-family: "Gilroy_Bold";
+        font-family: 'Gilroy_Bold';
         font-size: 24px;
         margin-bottom: 24px;
         text-align: center;
@@ -67,7 +67,7 @@
       label {
         display: block;
         margin-bottom: 8px;
-        font-family: "Gilroy_Bold";
+        font-family: 'Gilroy_Bold';
         font-size: 15px;
         color: #4a5568;
       }
@@ -80,7 +80,7 @@
         height: 40px;
         text-align: left;
         font-size: 14px;
-        font-family: "Gilroy_Regular";
+        font-family: 'Gilroy_Regular';
         background-color: white;
         color: black;
         transition: border-color 0.3s ease;
@@ -92,7 +92,7 @@
       }
 
       button {
-        font-family: "Gilroy_Bold";
+        font-family: 'Gilroy_Bold';
         background-color: #77be79;
         border: none;
         color: white;
@@ -124,7 +124,7 @@
         margin-top: 12px;
         display: none;
         text-align: center;
-        font-family: "Gilroy_Medium";
+        font-family: 'Gilroy_Medium';
         animation: fadeIn 0.3s ease-out;
       }
 
@@ -174,22 +174,22 @@
     </div>
 
     <script>
-      const form = document.getElementById("activationForm");
-      const errorDiv = document.getElementById("error");
+      const form = document.getElementById('activationForm');
+      const errorDiv = document.getElementById('error');
 
-      form.addEventListener("submit", async (e) => {
+      form.addEventListener('submit', async (e) => {
         e.preventDefault();
 
-        const email = document.getElementById("email").value;
-        const key = document.getElementById("key").value;
+        const email = document.getElementById('email').value;
+        const key = document.getElementById('key').value;
 
         try {
           const response = await fetch(
-            "https://immotep-server.onrender.com/verify-key",
+            'https://immotep-server-production.up.railway.app/verify-key',
             {
-              method: "POST",
+              method: 'POST',
               headers: {
-                "Content-Type": "application/json",
+                'Content-Type': 'application/json',
               },
               body: JSON.stringify({ email, key }),
             }
@@ -198,21 +198,21 @@
           const data = await response.json();
 
           if (data.valid) {
-            window.opener.postMessage({ type: "payment_success" }, "*");
+            window.opener.postMessage({ type: 'payment_success' }, '*');
             alert(
-              "Activation réussie ! Vous pouvez maintenant fermer cette fenêtre."
+              'Activation réussie ! Vous pouvez maintenant fermer cette fenêtre.'
             );
             window.close();
           } else {
-            errorDiv.textContent = data.message || "Clé invalide";
-            errorDiv.style.display = "block";
+            errorDiv.textContent = data.message || 'Clé invalide';
+            errorDiv.style.display = 'block';
             setTimeout(() => {
-              errorDiv.style.display = "none";
+              errorDiv.style.display = 'none';
             }, 3000);
           }
         } catch (error) {
-          errorDiv.textContent = "Erreur lors de la vérification";
-          errorDiv.style.display = "block";
+          errorDiv.textContent = 'Erreur lors de la vérification';
+          errorDiv.style.display = 'block';
         }
       });
     </script>
