Update success page message to add refresh instruction

--- a/success.html
+++ b/success.html
@@ -154,7 +154,8 @@
         <h1>Félicitations !</h1>
         <p class="message">
           Votre paiement a été traité avec succès.<br />
-          Votre extension est maintenant en version premium.
+          Votre extension est maintenant en version premium. (ré-actualisez la
+          page)
         </p>
         <div class="email-info">
           <p>Un email contenant votre clé d'activation a été envoyé à :</p>
