--- a/payment.html
+++ b/payment.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Paiement Premium</title>
+    <title>Soutenez le projet - Immotep Premium</title>
     <script src="https://js.stripe.com/v3/"></script>
     <style>
+      @font-face {
+        font-family: 'Gilroy_Bold';
+        src: url('/fonts/Gilroy-Bold.ttf') format('truetype');
+      }
+
+      @font-face {
+        font-family: 'Gilroy_Medium';
+        src: url('/fonts/Gilroy-Medium.ttf') format('truetype');
+      }
+
+      @font-face {
+        font-family: 'Gilroy_Regular';
+        src: url('/fonts/Gilroy-Regular.ttf') format('truetype');
+      }
+
       * {
         margin: 0;
         padding: 0;
@@ -11,20 +26,20 @@
       }
 
       body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          sans-serif;
+        font-family: 'Gilroy_Regular', sans-serif;
         min-height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
         background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+        padding: 20px;
       }
 
       .container {
         background: white;
-        padding: 2.5rem;
-        border-radius: 20px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+        padding: 32px;
+        border-radius: 10px;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         text-align: center;
         max-width: 90%;
         width: 400px;
@@ -43,9 +58,10 @@
       }
 
       h1 {
+        font-family: 'Gilroy_Bold';
         color: #2d3748;
         margin-bottom: 1.5rem;
-        font-size: 2rem;
+        font-size: 28px;
       }
 
       .donation-container {
@@ -53,8 +69,9 @@
       }
 
       .donation-title {
+        font-family: 'Gilroy_Medium';
         color: #4a5568;
-        font-size: 1.1rem;
+        font-size: 16px;
         margin-bottom: 1rem;
       }
 
@@ -66,17 +83,18 @@
       }
 
       .amount-button {
+        font-family: 'Gilroy_Bold';
         padding: 0.5rem 1rem;
-        border: 2px solid #4299e1;
-        border-radius: 8px;
+        border: 2px solid #77be79;
+        border-radius: 12px;
         background: white;
-        color: #4299e1;
+        color: #77be79;
         cursor: pointer;
         transition: all 0.2s;
       }
 
       .amount-button.selected {
-        background: #4299e1;
+        background: #77be79;
         color: white;
       }
 
@@ -86,6 +104,7 @@
         justify-content: center;
         gap: 0.5rem;
         margin-bottom: 1.5rem;
+        font-family: 'Gilroy_Medium';
       }
 
       .custom-amount input {
@@ -94,16 +113,28 @@
         border: 2px solid #e2e8f0;
         border-radius: 8px;
         text-align: center;
+        font-family: 'Gilroy_Regular';
       }
 
       .proceed-button {
-        background: #4299e1;
-        color: white;
+        font-family: 'Gilroy_Bold';
+        background-color: #77be79;
         border: none;
-        padding: 0.75rem 1.5rem;
-        border-radius: 8px;
+        color: white;
+        padding: 12px 32px;
+        border-radius: 12px;
         cursor: pointer;
-        font-size: 1.1rem;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
+        width: 100%;
+      }
+
+      .proceed-button:hover {
+        background-color: #337e37;
+      }
+
+      .proceed-button:active {
+        background-color: #2ba72f;
       }
 
       #loading {
@@ -112,13 +143,14 @@
         align-items: center;
         justify-content: center;
         gap: 10px;
+        font-family: 'Gilroy_Medium';
       }
 
       .spinner {
         width: 20px;
         height: 20px;
         border: 3px solid #e2e8f0;
-        border-top: 3px solid #4299e1;
+        border-top: 3px solid #77be79;
         border-radius: 50%;
         animation: spin 1s linear infinite;
       }
@@ -136,18 +168,19 @@
         color: #e53e3e;
         background: #fff5f5;
         padding: 1rem;
-        border-radius: 8px;
+        border-radius: 12px;
         margin-top: 1rem;
         display: none;
+        font-family: 'Gilroy_Medium';
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>Extension Premium</h1>
+      <h1>Soutenez le projet</h1>
       <div class="donation-container">
         <div class="donation-title">
-          Choisissez votre contribution (minimum 10€)
+          Contribuez au développement d'Immotep Premium (minimum 10€)
         </div>
         <div class="amount-buttons">
           <button class="amount-button" data-amount="10">10€</button>
@@ -179,56 +212,56 @@
 
     <script>
       // Gestion des boutons de montant
-      const amountButtons = document.querySelectorAll(".amount-button");
-      const customAmountInput = document.getElementById("custom-amount");
+      const amountButtons = document.querySelectorAll('.amount-button');
+      const customAmountInput = document.getElementById('custom-amount');
 
       amountButtons.forEach((button) => {
-        button.addEventListener("click", () => {
-          amountButtons.forEach((btn) => btn.classList.remove("selected"));
-          button.classList.add("selected");
+        button.addEventListener('click', () => {
+          amountButtons.forEach((btn) => btn.classList.remove('selected'));
+          button.classList.add('selected');
           customAmountInput.value = button.dataset.amount;
         });
       });
 
-      customAmountInput.addEventListener("input", () => {
-        amountButtons.forEach((btn) => btn.classList.remove("selected"));
+      customAmountInput.addEventListener('input', () => {
+        amountButtons.forEach((btn) => btn.classList.remove('selected'));
         // Afficher un message d'aide si le montant est inférieur à 10
-        const errorDiv = document.getElementById("error");
+        const errorDiv = document.getElementById('error');
         if (customAmountInput.value && parseInt(customAmountInput.value) < 10) {
-          errorDiv.textContent = "Le montant minimum est de 10€";
-          errorDiv.style.display = "block";
+          errorDiv.textContent = 'Le montant minimum est de 10€';
+          errorDiv.style.display = 'block';
         } else {
-          errorDiv.style.display = "none";
+          errorDiv.style.display = 'none';
         }
       });
 
       async function handlePayment() {
         const amount = parseInt(customAmountInput.value);
         if (!amount || amount < 10) {
-          const errorDiv = document.getElementById("error");
-          errorDiv.textContent = "Le montant minimum est de 10€";
-          errorDiv.style.display = "block";
+          const errorDiv = document.getElementById('error');
+          errorDiv.textContent = 'Le montant minimum est de 10€';
+          errorDiv.style.display = 'block';
           return;
         }
 
-        document.querySelector(".donation-container").style.display = "none";
-        document.getElementById("loading").style.display = "flex";
+        document.querySelector('.donation-container').style.display = 'none';
+        document.getElementById('loading').style.display = 'flex';
 
         try {
           // Récupérer la clé publique Stripe
           const response = await fetch(
-            "https://immotep-server-production.up.railway.app/stripe-mode"
+            'https://immotep-server-production.up.railway.app/stripe-mode'
           );
           const data = await response.json();
           const stripe = Stripe(data.publicKey);
 
           // Créer la session avec le montant personnalisé
           const sessionResponse = await fetch(
-            "https://immotep-server-production.up.railway.app/create-session",
+            'https://immotep-server-production.up.railway.app/create-session',
             {
-              method: "POST",
+              method: 'POST',
               headers: {
-                "Content-Type": "application/json",
+                'Content-Type': 'application/json',
               },
               body: JSON.stringify({ amount: amount * 100 }), // Convertir en centimes pour Stripe
             }
@@ -240,12 +273,12 @@
             sessionId: session.id,
           });
         } catch (error) {
-          const errorDiv = document.getElementById("error");
-          errorDiv.textContent = "Une erreur est survenue. Veuillez réessayer.";
-          errorDiv.style.display = "block";
-          document.getElementById("loading").style.display = "none";
-          document.querySelector(".donation-container").style.display = "block";
-          console.error("Erreur:", error);
+          const errorDiv = document.getElementById('error');
+          errorDiv.textContent = 'Une erreur est survenue. Veuillez réessayer.';
+          errorDiv.style.display = 'block';
+          document.getElementById('loading').style.display = 'none';
+          document.querySelector('.donation-container').style.display = 'block';
+          console.error('Erreur:', error);
         }
       }
     </script>
